# pycottas

./: .zenodo.json  CITATION.cff  README.md  mkdocs.yml  pyproject.toml  readthedocs.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.yml  config.yml  installation-issue.md  submit-quesion.md
.github/workflows/: pypi-publish.yml
docs/: README.md  documentation.md  index.md  sparql_endpoint.md
examples/: README.md  example.py  inspect_cottas.py
src/cotta/: __init__.py  __main__.py  constants.py  graph.py  parser.py  serializer.py  term.py  utils.py
src/cotta/parser/: __init__.py  nquads.py  parquet.py
src/cotta/serializer/: nquads.py  parquet.py
src/cottas/: __init__.py  __main__.py  constants.py  cottas_store.py  graph.py  parser.py  serializer.py  tp_translator.py  triple_pattern_translator.py  utils.py
src/pycottas/: __init__.py  __main__.py  constants.py  cottas_document.py  tp_translator.py
