[build-system]
requires = ['hatchling>=1.11.0']
build-backend = 'hatchling.build'

[project.urls]
Documentation = ''
Source = ''
Tracker = ''

[project]
name = 'cottas'
description = ''
readme = 'README.md'
keywords = []
authors = [
  {name = 'Julián Arenas-Guerrero', email = 'julian.arenas.guerrero@upm.es'}
]
license = 'Apache-2.0'
classifiers = [
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'License :: OSI Approved :: Apache Software License',
  'Operating System :: OS Independent',
  'Development Status :: 5 - Production/Stable',
  'Environment :: Console',
  'Intended Audience :: Information Technology',
  'Intended Audience :: Science/Research',
  'Topic :: Database',
  'Topic :: Utilities',
  'Topic :: Scientific/Engineering'
]
requires-python = '>=3.8'
dynamic = ['version']
dependencies = [
  'pandas>=2.0.0, <3.0.0',
  'numpy==1.26.4',
  'duckdb>=1.2.2, <2.0.0',
  'pyoxigraph==0.3.18'
]

[tool.hatch.version]
path = 'src/cottas/_version.py'
